# AI_Agent_Tutorials_Python

./: Readme.md  pyproject.toml
src/app/: main.py
src/app/agents/: basic_agent.py  personal_chef_agent.py
src/app/api/: agent_routes.py
src/app/core/: llm.py
src/app/mcp/: client.py  langchain_adapter.py  schemas.py  server.py
src/app/mcp/tools/: basic_tools.py  chef_tools.py
